# scion-irec

./: .gitignore  BUILD.bazel  bench.toml  bench1.sh  bench2.sh  bench3.sh  go.mod  go.sum  go_deps.bzl  run.sh
algorithms/: deadbeef.wasm  module.wasm  module.wasm.bak  module.wasm.verbose  module.wasm.withsubmit
bench/: BUILD.bazel  config.go  main.go  selection_algo.go
bench_conf/: generateRacs.py  topology.json
control/: tasks.go
control/beacon/: db.go
control/beaconing/: propagator.go
control/cmd/control/: BUILD.bazel  main.go
control/config/: config.go
control/ifstate/: ifstate.go
control/irec/egress/: BUILD.bazel  core_originator.go  extending.go  pathregistrar.go  propagator.go  sender.go  staticextension.go  store.go  util.go
control/irec/ingress/: BUILD.bazel  handler.go  ingress_server.go  legacy_ingress.go  racmanager.go  store.go
pkg/grpc/: dialer.go
pkg/proto/control_plane/: seg_extensions.pb.go
pkg/proto/rac/: BUILD.bazel  rac.pb.go
pkg/segment/: BUILD.bazel  as.go  extensions.go  seg.go
pkg/segment/extensions/irec/: BUILD.bazel  irec.go
private/storage/: BUILD.bazel  storage.go
private/storage/egress/: BUILD.bazel  beacon.go
private/storage/egress/sqlite/: BUILD.bazel  db.go  schema.go
private/storage/ingress/: BUILD.bazel
private/storage/ingress/sqlite/: BUILD.bazel  db.go  schema.go
private/svc/: svc.go
private/topology/: topology.go
private/topology/json/: json.go
proto/control_plane/v1/: BUILD.bazel  irec.proto  seg_extensions.proto
proto/rac/v1/: BUILD.bazel  rac.proto
rac/: BUILD.bazel  service.go  writer.go
rac/cmd/rac/: BUILD.bazel  config.go  main.go
rac/env/wasm/: BUILD.bazel  environment.go  util.go
tools/topology/: common.py  config.py  go.py  supervisor.py  topo.py
topology/: default.topo  tiny4.topo
