load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "core_originator.go",
        "extending.go",
        "pathregistrar.go",
        "propagator.go",
        "sender.go",
        "staticextension.go",
        "store.go",
        "util.go",
    ],
    importpath = "github.com/scionproto/scion/control/irec/egress",
    visibility = ["//visibility:public"],
    deps = [
        "//control/beacon:go_default_library",
        "//control/ifstate:go_default_library",
        "//control/onehop:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/grpc:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/metrics:go_default_library",
        "//pkg/private/common:go_default_library",
        "//pkg/private/prom:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/private/util:go_default_library",
        "//pkg/proto/control_plane:go_default_library",
        "//pkg/segment:go_default_library",
        "//pkg/segment/extensions/digest:go_default_library",
        "//pkg/segment/extensions/epic:go_default_library",
        "//pkg/segment/extensions/irec:go_default_library",
        "//pkg/segment/extensions/staticinfo:go_default_library",
        "//pkg/slayers/path:go_default_library",
        "//pkg/snet:go_default_library",
        "//private/segment/seghandler:go_default_library",
        "//private/topology:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
