load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "handler.go",
        "ingress_server.go",
        "legacy_ingress.go",
        "racmanager.go",
        "store.go",
    ],
    importpath = "github.com/scionproto/scion/control/irec/ingress",
    visibility = ["//visibility:public"],
    deps = [
        "//control/beacon:go_default_library",
        "//control/ifstate:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/grpc:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/common:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/control_plane:go_default_library",
        "//pkg/proto/rac:go_default_library",
        "//pkg/segment:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//pkg/snet:go_default_library",
        "//private/segment/segverifier:go_default_library",
        "//private/segment/verifier:go_default_library",
        "//private/svc:go_default_library",
        "//private/topology:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
