load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "control_plane",
    srcs = [
        "cppki.proto",
        "drkey.proto",
        "renewal.proto",
        "seg.proto",
        "seg_extensions.proto",
        "svc_resolution.proto",
        "irec.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/control_plane/experimental/v1:experimental",
        "//proto/crypto/v1:crypto",
        "//proto/drkey/v1:drkey",
        "@com_google_protobuf//:timestamp_proto",
    ],
)
