load("//tools/lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "main.go",
    ],
    importpath = "github.com/scionproto/scion/rac/cmd/rac",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/grpc:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/control_plane:go_default_library",
        "//pkg/proto/rac:go_default_library",
        "//private/app:go_default_library",
        "//private/app/launcher:go_default_library",
        "//private/config:go_default_library",
        "//private/env:go_default_library",
        "//private/topology:go_default_library",
        "//rac:go_default_library",
        "//rac/env/wasm:go_default_library",
        "@com_github_bytecodealliance_wasmtime_go//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//resolver:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

scion_go_binary(
    name = "rac",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
